<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gehirnjogging</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="geteilt">/</string>
    <string name="multiplizieren">*</string>
    <string name="Highscores">Highscores</string>
    <string name="Start">Start</string>
    <string name="Optionen">Optionen</string>
    <string name="Credits">Credits</string>
    <string name="Mathe">Mathe</string>
    <string name="Informatik">Informatik</string>
    <string name="Kabelbinder">Kabelbinder</string>
    <string name="BitOut">BitOut</string>
    <string name="Lautstaerke">Lautstärke</string>
    <string name="Deutsch">Deutsch</string>
    <string name="Englisch">Englisch</string>
    <string name="title_activity_optionen">Optionen</string>
    <string name="title_activity_spielauswahl">Spielauswahl</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_optionenauswahl">Optionenauswahl</string>
    <string name="title_activity_main">Informagics</string>
    <string name="count">Counter: 0</string>
    <string name="Memory">Memory</string>
    <string name="Nachschlagewerk">Nachschlagewerk</string>
    <string name="punktezahlbitout">Punkte: 100</string>
    <string name="timerbitout">Zeit:</string>
    <string name="timerkabel">Zeit:</string>
    <string name="punktekabel">Punkte: 100</string>
    <string name="desc" />
    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_benutzername">Benutzername</string>

</resources>