<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menue"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="77dp" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/___"
        android:onClick="Spielauswahloeffnen"
        android:text="@string/Start"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/___"
        android:text="@string/Highscores"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/___"
        android:onClick="Creditsoeffnen"
        android:text="@string/Credits"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/___"
        android:onClick="Optionenauswahloeffnen"
        android:text="@string/Optionen"
        android:textColor="#FFFFFF" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="75dp" />

</LinearLayout>