<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menue"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="77dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/_____"
        android:onClick="Mathe"
        android:text="@string/Mathe"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/_____"
        android:onClick="Informatik"
        android:text="@string/Informatik"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/_____"
        android:onClick="Kabelbinder"
        android:text="@string/Kabelbinder"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:background="@drawable/_____"
        android:onClick="BitOut"
        android:text="@string/BitOut"
        android:textColor="#FFFFFF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="75dp" />

</LinearLayout>