<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_math"
    android:orientation="vertical" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="21dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp" >

        <View
            android:layout_width="199dp"
            android:layout_height="276dp" />
        
        <TextView
            android:id="@+id/punkte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Punktzahl : 0"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/IMVSprechblase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/sprechblase"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/Aufgabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="asfdasda"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtNur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Du hast nur"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtSchlecht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="erreicht. GOTT ist das schlecht!"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/multiplizieren" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/plus" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/geteilt" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/minus" />
    </LinearLayout>

</LinearLayout>